# BayesOpt-CUDA

./: .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  build.bat  demo.py  fix_msvc.bat  install_vc.bat  pyproject.toml  setup.py  test.cpp
bayesopt_cuda/: __init__.py  gp_cuda.py  kernels_naive.py  kernels_optimized.py  optimizer_cuda.py  reference.py
bayesopt_cuda/csrc/: acquisition_fused.cu  acquisition_fused_cholesky.cu  bindings.cpp  ei_kernel_naive.cu  rbf_kernel_naive.cu  rbf_kernel_tiled.cu  rbf_kernel_tiled_fp16.cu
benchmarks/: bench_kernels.py
docs/: api.md  architecture.md  benchmarks.md  kernels.md
scratch/: diag_ei.py
scripts/: profile_rbf.py
tests/: conftest.py  test_api.py  test_bench_smoke.py  test_cholesky_kernels.py  test_naive_kernels.py  test_optimized_kernels.py  test_reference.py
